--- a/js/practice/练习3阶乘与阶乘之和.html
+++ b/js/practice/练习3阶乘与阶乘之和.html
@@ -77,7 +77,7 @@
     }
 
     document.write("<br>")
-    document.write("第三种方法-- 1到10的阶乘之和为:"+sum2);
+    document.write("第四种方法-- 1到10的阶乘之和为:"+sum2);
    </script>   
 </body>
 </html>
