--- a/js/对象.html
+++ b/js/对象.html
@@ -30,6 +30,7 @@
     };
     o1.sayhello();
     console.log(o1);
+
     //2.使用对象直接量(literal)
     var o2 ={
         name: "liwu",
@@ -40,15 +41,17 @@
     };
     o2.sayhello();
     console.log(o2);
+
     // 3. object.create
     var o3 =Object.create(o1);//继承o1的属性  即proto
-    // 相当于：o3._proto_=01; prototype（原型）
+    // 相当于：o3._proto_=o1; prototype（原型）（链）：  被设计出来的目的就是用来做继承
     o3.gender ='male';//o3自己的属性
     o3.name='laowu';
     o1.name='laoliu';
     console.log(o3.name); //先找子对象 子对象没有再找父对象
+
     //4.new Class
-    //es6
+    //es6：
     class person{
                    constructor(n,a){
                        this.name=n;//属性=属性的值
@@ -57,28 +60,77 @@
     }
     var p1 =new person('lilei',24);//构造函数
     console.log(p1);
-    //es5-
+
+    //es5-：
     //定义类
     //约定：属性放在类的构造函数中，方法放在原型中
     //栈内存 stack 连续存储  堆内存 heap 散列存储
-    function Person(name,age){
+    function Person(name,age){//类
         this.name=name;
         this.age=age;
-        this.sayhello=function(){
+        // this.sayhello=function(){
+        //  console.log('my name is '+this.name+",");
+        // };
+    }
+    person.prototype.sayhello=function(){
          console.log('my name is '+this.name+",");
         };
-    }
-    // person.prototype.sayhello=function(){
-    //      console.log('my name is '+this.name+",");
-    //     };
     //创建类的实例对象
+    // var pp=new Person();  // 构造函数
     var p2=new Person('zhangsan',6);
     console.log(p2.sayhello());
     p2.sayhello();
+
     //值传递和引用传递
     //基本数据类型值传递   
-    //引用类型引用传递，在底层还是进行值传递
-    
+    //引用类型引用传递，在底层还是进行值传递       num string boolean undefined  null     object（引用传递 地址赋值）底层为值传递
+
+    var obj=new Object();
+    obj.name='zhangsan';
+    obj.age=25;
+    obj['gender']='male';
+    obj.sayhello=function(){
+        console.log(this.gender);
+    }
+    obj.sayhello=function(){
+        console.log(this.name+',hello!');
+    }
+    obj.brother={
+        name:'lisi',
+        age:24,
+        wife:'limei'
+    }
+       var x='name';
+    console.log(obj['x']);//obj.x  x是属性 undefined
+    console.log(obj[x]);//obj.name x属性值
+
+    //for in 循环  对象内部的遍历循环
+    for(var  prop in obj){
+        if(typeof obj[prop]=='function')
+         obj[prop]();
+         else if(typeof obj[prop]=='object'){
+             for(var prop2 in obj[prop]){
+                 console.log(prop2+'='+obj[prop][prop2]);
+             }
+         }
+         else
+          console.log(prop+'='+obj[prop]);//prop='name','age','gender' 'saythello'          prop 属性 obj[prop] 属性值
+    }
+
+ //递归遍历
+ function printObject(obj){
+     for(var prop in obj){
+         if(typeof obj[prop]=='function'){
+            obj[prop]();
+         }
+         else if(typeof obj[prop]=='object'){
+             printObject(obj[prop]);
+         }
+         else
+          console.log(prop+'='+obj[prop]);
+     }
+ }   
+    printObject(obj);
 </script>
 </body>
 </html>
