--- a/css/弹性盒模型.html
+++ b/css/弹性盒模型.html
@@ -29,8 +29,8 @@
             /* align-content: flex-start; */
             /* align-items: stretch; */
         }
-        .item:nth-child(2){
-            padding:20px 0;
+        /* .item:nth-child(2){
+            padding:20px 0; */
 
             /* align-item的个性化设置 */
            /* align-self: flex-end; */
@@ -47,7 +47,7 @@
            /* 排序:默认值是0,数越小越靠前 */
            /* order: 1; */
            /* display: flex; */
-        }
+        /* } */
         .item{
             width: 100px;
             height: 100px;
