--- a/js/wdad.html
+++ b/js/wdad.html
@@ -9,18 +9,48 @@
     <script>
         //引用传递 和值传递
       //x={};
-        var x=5;
-        function test(){
-             x=6;
-            function test2(){
-                var x =7;
-                console.log(x);
-            }
-            test2();
+        // var x=5;
+        // function test(){
+        //      x=6;
+        //     function test2(){
+        //         var x =7;
+        //         console.log(x);
+        //     }
+        //     test2();
+
+        // }
+        // test();
+    var b={
+        x:7
+    };
+    function test3(x){
+         var x={
+             
+         };
+        console.log(x);
+    }
+  test3(b);
+
+      function Test(x,name) {
+          this.x=5;
+          this.name=name;
+            // function test2(){
+            //     var y =7;
+            //     console.log(y);
+            // };
+            // test2();
 
         }
-        test();
-        
+       var test1 =new Test(6,'lilei');
+        console.log(test1.x);
+
+        console.log(a);        //undefined          变量提升
+        var a=1;
+
+
+        // var a;
+        // console.log(a);
+        // a=1;
     </script>
 </body>
 </html>
