es6&dom_webShow

--- a/js/变量.html
+++ b/js/变量.html
@@ -58,6 +58,7 @@
         //严格区分大小写
         //不能用关键字和保留字
       var testName ='hello'//驼峰式命名
+      document.write("John said ,\"Hi!\"");
 
     </script>
 </body>
