--- a/es6/深拷贝和浅拷贝.html
+++ b/es6/深拷贝和浅拷贝.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>深拷贝和浅拷贝</title>
 </head>
+
 <body>
     <script>
-        let obj1= {
-            name:'lisi',
-            age:24,
-            brother:{
-                name:'lixx',
-                age:23,
+        let obj1 = {
+            name: 'lisi',
+            age: 24,
+            brother: {
+                name: 'lixx',
+                age: 23,
             }
         }
         //这是赋值 不是拷贝
-        let obj2=obj1;
+        let obj2 = obj1;
         console.log(obj2);
-        obj2.name='wangwu';
+        obj2.name = 'wangwu';
         console.log(obj1.name);
-        function clone(obj){  
-            let o=obj.constructor ==Array ? []: {};
-            for(let p in obj){
+        function clone(obj) {
+            let o = obj.constructor == Array ? [] : {};
+            for (let p in obj) {
 
                 console.log(p);
-                o[p]=obj[p];//如果有子对象 也相当于赋值
-                if(typeof obj[p]==='object'){
-                   o[p]=clone(obj[p]);
+                o[p] = obj[p];//如果有子对象 也相当于赋值
+                if (typeof obj[p] === 'object') {
+                    o[p] = clone(obj[p]);
                 }
-               
+
             }
-            return o; 
+            return o;
         }
-        let obj3=clone(obj1);//
+        let obj3 = clone(obj1);//
         console.log(obj3);
-        obj3.age=56;
-        obj3.brother.age=99;
+        obj3.age = 56;
+        obj3.brother.age = 99;
         console.log(obj1.brother.age);//99  没有加递归  相当于两个对象赋值
         console.log(obj1.age);//24
 
-        let arr1 =[1,2,[2,3]];   
-        let arr2=clone(arr1);
-        arr2[2][1]=666;
+        let arr1 = [1, 2, [2, 3]];
+        let arr2 = clone(arr1);
+        arr2[2][1] = 666;
         console.log(arr1);
         console.log(arr2);
     </script>
 </body>
+
 </html>
