vue-app-content

--- a/es6/promise.html
+++ b/es6/promise.html
@@ -8,6 +8,7 @@
 <body>
     <script>
         //回调地狱
+        //promise 用同步的形式处理异步的问题
         let p1 =new Promise((resolve,reject)=>{
             console.log('请求1 ing...');
             setTimeout(()=>{
