--- a/es6/symbol&map&set.html
+++ b/es6/symbol&map&set.html
@@ -57,7 +57,7 @@
         let a2 = [...s1];
         console.log(a2);
 
-        //添加数据add（）
+        //添加数据add（） 有返回值 返回操作完的set结构
         s1.add(888);
         s1.add(6);
         s1.add('hello');
