--- a/vue/template-components.html
+++ b/vue/template-components.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>template</title>
+    <title>template-components</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
             <p slot="slot1">今天是个好日子1</p>
             <p slot="slot2">今天是个好日子2</p>
         </my-com>
-        <!-- template不会渲染在dom结构中 -->
+        <!-- template模板标签   不会渲染在dom结构中 -->
         <template v-for="item in list" >
             <h5>{{item}}</h5>
             <h3>{{item}}</h3>
