--- a/vue/生命周期.html
+++ b/vue/生命周期.html
@@ -49,7 +49,7 @@
                 console.log('data',this.$data);// data {__ob__: Observer}
                 console.log('innerHTML',document.getElementById('app').innerHTML);//  <p>{{count}}</p>
             },
-            //模板中的data数据显示出来了 挂载后
+            //模板中的data数据显示出来了 挂载后 【初次加载结束】
             mounted(){
                 console.log('------- mounted------');
                 console.log('el',this.$el);//el <div id=​"app">​<p>​0​</p>​</div>​
