--- a/es6/数组的扩展.html
+++ b/es6/数组的扩展.html
@@ -59,10 +59,10 @@
 
         /* 6. 数组的填充 arr.fill('xx',1,3)  会改变原数组*/
         let a6 = ['a', 'b', 'c', 'd'];
-        console.log(a6.fill('xx', 1, 3));//['a','xx','xx']
-        console.log(a6.fill('yy', 1, 2));//['a','yy','xx']
-        console.log(a6.fill('oo', 0));//['oo','oo','oo']
-        console.log(a6.fill('lala'));//['lala','lala','lala']
+        console.log(a6.fill('xx', 1, 3));//['a','xx','xx','d']
+        console.log(a6.fill('yy', 1, 2));//['a','yy','xx','d']
+        console.log(a6.fill('oo', 0));//['oo','oo','oo','oo']
+        console.log(a6.fill('lala'));//['lala','lala','lala','lala']
         /* 7.arr.includes() 数组是否包含给定的值*/
         let a7 = [66, 77, 88, 99];
         console.log(a7.includes(88));//true
