--- a/vue/set.html
+++ b/vue/set.html
@@ -26,7 +26,7 @@
                       //这种写法在vue中只能获取数组中某个元素的值，不能修改内容
                         // this.list[1]=888;
                         // console.log(this.list);
-
+                       //set(变量，索引，新值)
                         Vue.set(this.list,1,666)
                         this.$set(this.list,2,999)
                   }
