--- a/vue/简易购物车.html
+++ b/vue/简易购物车.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>简易购物车</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        ul{
+
+        ul {
             list-style: none;
 
         }
-        #div1{
+
+        #div1 {
             width: 400px;
             height: 400px;
             margin: 0 auto;
@@ -21,44 +24,57 @@
             border: red solid 1px;
             background-color: pink;
         }
-        #app{
+
+        #app {
             width: 400px;
             height: 400px;
-             position: absolute;
-             left: 50px;
-             top: 20px;
-             padding: 50px;
+            position: absolute;
+            left: 50px;
+            top: 20px;
+            padding: 50px;
         }
-        li{
+
+        li {
             width: 200px;
             height: 30px;
             line-height: 30px;
             border: transparent 2px solid;
-          
+
         }
-        ul .active{
+
+        .active {
             background-color: red;
             color: black;
         }
+
+        .left {
+            float: left;
+        }
+
+        .right {
+            float: right;
+        }
     </style>
 </head>
+
 <body>
     <div id="div1">
         <div id="app">
             <h1>商品列表</h1>
             <ul>
-                <li :class="['list',item.isActive?'active':'']" v-for="item in list" @click="change(item)">
-                    <span>{{item.name}}</span>
-                    <span>{{item.price}}</span>
+                <li :class="['list',item.isActive?'active':'']" v-for="(item,index) in list" :key="index"
+                    @click="change(item)">
+                    <span class="left">{{item.name}}</span>
+                    <span class="right">{{item.price}}</span>
                 </li>
             </ul>
             <!-- 方法调用 -->
             <p>总价：{{sum()}}</p>
             <!-- 计算属性 -->
             <p>总价：{{total}}</p>
-    <!-- 
+            <!-- 
         计算属性和方法调用的区别
-         方法调用：每当触发重新渲染时（只要data当中的数据改变），方法就会被调用
+         方法调用：每当触发重新渲染时（只要data当中的数据改变），方法 methods里的方法就会被调用
          计算属性：只在相关响应式依赖发生变化时他们才会重新求值
      -->
         </div>
@@ -66,56 +82,59 @@
     <script src="vue.js"></script>
     <script>
         new Vue({
-            el:'#app',
-            data:{
-              list:[{
-                  name:'衬衫',
-                  price:99,
-                  isActive:false,
-              },
-              {
-                  name:'电脑',
-                  price:8999,
-                  isActive:false,
-              },
-              {
-                  name:'裤子',
-                  price:399,
-                  isActive:false,
-              },
-              {
-                  name:'鞋',
-                  price:888,
-                  isActive:false,
-              }
-            ]
+            el: '#app',
+            data: {
+                list: [{
+                    name: '衬衫',
+                    price: 99,
+                    isActive: false,
+                },
+                {
+                    name: '电脑',
+                    price: 8999,
+                    isActive: false,
+                },
+                {
+                    name: '裤子',
+                    price: 399,
+                    isActive: false,
+                },
+                {
+                    name: '鞋',
+                    price: 888,
+                    isActive: false,
+
+                }
+                ]
             },
-            computed:{
-                total(){
-                let count=0;
-                this.list.forEach((obj,index) => {
-                    if(obj.isActive){
-                            count+=obj.price;
-                    }
-                });
-                return count;
+            computed: {
+                total() {
+                    let count = 0;
+                    this.list.forEach((obj, index) => {
+                        if (obj.isActive) {
+                            count += obj.price;
+                        }
+                    });
+                    return count;
                 }
             },
-            methods:{
-            change(item){
-                item.isActive=!item.isActive
-            },
-            sum(){
-                let count=0;
-                this.list.forEach((obj,index) => {
-                    if(obj.isActive){
-                        count+=obj.price;
-                    }
-                });
-                return count;
-            }
+            methods: {
+                change(item) {
+                    item.isActive = !item.isActive
+                },
+                sum() {
+                    let count = 0;
+                    this.list.forEach((obj, index) => {
+                        if (obj.isActive) {
+                            count += obj.price;
+                        }
+                    });
+                    return count;
+                }
             }
         })
+
     </script>
 </body>
+
 </html>
