--- a/css/外边距合并.html
+++ b/css/外边距合并.html
@@ -12,7 +12,7 @@
             background: #cccccc;
             margin-top:50px;
             /* overflow: hidden; */
-            border:1px solid transparent;
+            /* border:1px solid transparent; */
         }
         #child{
             width: 100px;
@@ -36,7 +36,6 @@
 
     <div id="parent">
         <div id="child">
-
         </div>
     </div>
     
