--- a/es6/对象的扩展.html
+++ b/es6/对象的扩展.html
@@ -44,6 +44,7 @@
          console.log(+0===-0);//true
          console.log(Object.is(+0,-0));//false
          console.log(NaN===NaN);//false
+         console.log(null===[]);
          console.log(Object.is(NaN,NaN));//true
          /* 4.对象的合并  浅拷贝！！*/
          let obj4 =Object.assign({},obj1,obj3);
