--- a/es6/数组的扩展.html
+++ b/es6/数组的扩展.html
@@ -65,8 +65,10 @@
         console.log(a6.fill('lala'));//['lala','lala','lala','lala']
         /* 7.arr.includes() 数组是否包含给定的值*/
         let a7 = [66, 77, 88, 99];
+        let str1="abcede2"
         console.log(a7.includes(88));//true
         console.log(a7.includes(666));//false
+        console.log(str1.includes(2));
         /* 8.数组的循环 */
         let list = [{
             name: 'a',
