--- a/es6/继承.html
+++ b/es6/继承.html
@@ -53,8 +53,8 @@
         console.log(p1);
         /* 
           继承：
-             1.在子类的构造函数中，咬用call（）继承父类的属性
-             2。子类的prototy=父类的实例化对象，用来继承父类中的方法
+             1.在子类的构造函数中，用call（）继承父类的属性
+             2。子类的prototype=父类的实例化对象，用来继承父类中的方法
              3。让子类的constructor指回子类
 
         */
