--- a/js/变量.html
+++ b/js/变量.html
@@ -27,7 +27,8 @@
 
           var bb = undefined;
           console.log(bb);
-
+        console.log("111"+111);//111111
+        console.log("2"*5);//10
           //console.log(qq);//报错qq is not defined
 
           var nu = null;//对空对象的引用：null是一个不存在对象的占位符
@@ -59,6 +60,11 @@
         //不能用关键字和保留字
       var testName ='hello'//驼峰式命名
       document.write("John said ,\"Hi!\"");
+      var arr=[1,2,3,4,5,6]
+      var arr1=arr.slice(1)
+      arr[2]=6
+      console.log(arr);
+      console.log(arr1);
 
     </script>
 </body>
