--- a/css/垂直水平居中.html
+++ b/css/垂直水平居中.html
@@ -12,9 +12,10 @@
         body{
             background: #cccccc;
             height: 100vh;
-            display: flex;
+            /* display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: center; */
+            /* position: relative; */
             
         }
         #box1{
@@ -25,12 +26,12 @@
             /* margin: 0 auto; */
 
             /* 用定位的方式居中 */
-            /* position:absolute;
+            position:absolute;
             top:50%;
             left: 50%;
             margin-left: -100px;
             margin-top: -100px;
- */
+
 
         }
     </style>
