--- a/js/函数.html
+++ b/js/函数.html
@@ -51,15 +51,18 @@
 
 //闭包:1.在外部函数的内部声明内部函数,2.在内部函数引用了外部函数的局部变量  必须同时满足两个条件
 //在外部函数调用完毕之后 局部变量不被释放
-function fn1(){
+function fn4(){
     var a= 5;
-    function fn2(){
-        return a;
+    function fn5(a){
+        return a+2;
     }
-    return fn2;
+    return fn5();
 }
+console.log(fn4());
+console.log(fn4());
+
 //立即执行函数 立即调用 调用一次
-    (function(name){console.log(name);})('zhangsan');
+    // (function(name){console.log(name);})('zhangsan');
     
     for(var i=0;i<3;i++){
         (function(index){            
