--- a/js/practice/练习1随机数最大值.html
+++ b/js/practice/练习1随机数最大值.html
@@ -24,6 +24,7 @@
         document.write("x=");document.write(x);
         document.write("<BR>")
         document.write("y=");document.write(y);
+        console.log(window);
         document.write("<BR>")
          var max = x>=y?x:y;
          document.write("最大值是：");
