--- a/es6/深拷贝和浅拷贝.html
+++ b/es6/深拷贝和浅拷贝.html
@@ -47,6 +47,42 @@
         arr2[2][1] = 666;
         console.log(arr1);
         console.log(arr2);
+
+        //深拷贝
+        var a= [1,2,3]
+        var b = ['1','2','3']
+        var c= {
+            name:'zhangsan',
+            age:52
+        }
+    //    a=JSON.stringify(a) //'[1,2,3]'
+    //    b=JSON.stringify(b) //'["1","2","3"]'
+    //    c=JSON.stringify(c) //'{"name":"zhangsan","age":52}'
+
+    // a=JSON.parse([1,2,3])      // 不是字符串 报错
+        var d ='"abc"' // 'abc' 报错  '"abc"'
+        var e = '{"name":"zhangsan","age":52}'
+        var f = '["1",3,"a","c",45]'
+        d=JSON.parse(d)  
+        e=JSON.parse(e)   
+        f=JSON.parse(f)   
+        console.log(a);
+        console.log(b);
+        console.log(c);
+        console.log(d);console.log(Object.prototype.toString.call(d));
+        console.log(e); 
+        console.log(f);
+        console.log(e === c);//false
+        console.log(JSON.stringify(e) === JSON.stringify(c)) // true  字符串比较
+
+        function deepClone(data){
+                var _data=JSON.stringify(data)
+                return JSON.parse(_data)
+        }
+            var g = deepClone(c) 
+            console.log(g);
+            c.name="wangwu"
+            console.log(g.name);//zhangsan
     </script>
 </body>
 
