--- a/js/leetcode3.html
+++ b/js/leetcode3.html
@@ -246,6 +246,7 @@
             return res;
         };
         // console.log(letterCombinations2("236"));
+        /* 最强的数 */
             var kWeakestRows = function (mat, k) {
                 let map = new Map()
                 let res = []
@@ -262,6 +263,8 @@
             [1, 1, 0, 0, 0],
             [1, 1, 1, 1, 1]], 3
         ));
+        var a
+    console.log(Object.prototype.toString.call(a))
     </script>
 </body>
 
